vlib/v/checker/tests/ambiguous_function_call_a.vv
fn foo(foo int) {
	foo(foo + 1)
}

fn main() {
	foo(5)
}
